--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,13 @@
   <packaging>pom</packaging>
   <version>2.7.0-SNAPSHOT</version>
 
-  <properties>
-    <!--
-      Implementation-Vendor-Id used in manifests.
-    -->
-    <vendor.id>com.quartzdesk</vendor.id>
+  <parent>
+    <groupId>com.quartzdesk-parent-pom</groupId>
+    <artifactId>quartzdesk-parent-pom</artifactId>
+    <version>1.0.0</version>
+  </parent>
 
+  <properties>
     <com.quartzdesk.version>2.7.0</com.quartzdesk.version>
 
     <com.h2database.h2.version>1.3.170</com.h2database.h2.version>
