--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.quartzdesk-executor</groupId>
   <artifactId>quartzdesk-executor-pom</artifactId>
   <packaging>pom</packaging>
-  <version>2.7.1-SNAPSHOT</version>
+  <version>2.7.0</version>
 
   <parent>
     <groupId>com.quartzdesk-parent-pom</groupId>
