--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
-  ~ Copyright (c) 2015-2016 QuartzDesk.com.
+  ~ Copyright (c) 2015-2017 QuartzDesk.com.
   ~ Licensed under the MIT license (https://opensource.org/licenses/MIT).
   -->
 
@@ -11,7 +11,7 @@
   <groupId>com.quartzdesk-executor</groupId>
   <artifactId>quartzdesk-executor-pom</artifactId>
   <packaging>pom</packaging>
-  <version>2.7.1-SNAPSHOT</version>
+  <version>2.8.0</version>
 
   <parent>
     <groupId>com.quartzdesk-parent-pom</groupId>
@@ -20,7 +20,7 @@
   </parent>
 
   <properties>
-    <com.quartzdesk.version>2.7.0</com.quartzdesk.version>
+    <com.quartzdesk.version>2.8.0</com.quartzdesk.version>
 
     <com.h2database.h2.version>1.3.170</com.h2database.h2.version>
     <org.hibernate.version>4.3.11.Final</org.hibernate.version>
