--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.quartzdesk-executor</groupId>
   <artifactId>quartzdesk-executor-pom</artifactId>
   <packaging>pom</packaging>
-  <version>2.8.0</version>
+  <version>2.8.1-SNAPSHOT</version>
 
   <parent>
     <groupId>com.quartzdesk-parent-pom</groupId>
@@ -20,7 +20,7 @@
   </parent>
 
   <properties>
-    <com.quartzdesk.version>2.8.0</com.quartzdesk.version>
+    <com.quartzdesk.version>2.8.1-SNAPSHOT</com.quartzdesk.version>
 
     <com.h2database.h2.version>1.3.170</com.h2database.h2.version>
     <org.hibernate.version>4.3.11.Final</org.hibernate.version>
