--- a/quartzdesk-executor-common/pom.xml
+++ b/quartzdesk-executor-common/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>com.quartzdesk-executor</groupId>
     <artifactId>quartzdesk-executor-pom</artifactId>
-    <version>2.8.0</version>
+    <version>2.8.1-SNAPSHOT</version>
   </parent>
 
   <dependencies>
