--- a/pom.xml
+++ b/pom.xml
@@ -599,9 +599,9 @@
 
 
         <plugin>
-          <groupId>de.smartics.maven.plugin</groupId>
-          <artifactId>maven-buildmetadata-plugin</artifactId>
-          <version>1.1.3</version>
+          <groupId>com.redhat.rcm.maven.plugin</groupId>
+          <artifactId>buildmetadata-maven-plugin</artifactId>
+          <version>1.7.0</version>
           <configuration>
             <!--
             <hideCommandLineInfo>false</hideCommandLineInfo>
