--- a/quartzdesk-executor-web/pom.xml
+++ b/quartzdesk-executor-web/pom.xml
@@ -132,8 +132,8 @@
     <plugins>
 
       <plugin>
-        <groupId>de.smartics.maven.plugin</groupId>
-        <artifactId>maven-buildmetadata-plugin</artifactId>
+        <groupId>com.redhat.rcm.maven.plugin</groupId>
+        <artifactId>buildmetadata-maven-plugin</artifactId>
         <executions>
           <execution>
             <phase>initialize</phase>
