--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.quartzdesk-executor</groupId>
   <artifactId>quartzdesk-executor-pom</artifactId>
   <packaging>pom</packaging>
-  <version>3.0.0-SNAPSHOT</version>
+  <version>3.0.0</version>
 
   <parent>
     <groupId>com.quartzdesk-parent-pom</groupId>
@@ -20,11 +20,10 @@
   </parent>
 
   <properties>
-    <com.quartzdesk.version>3.0.0-SNAPSHOT</com.quartzdesk.version>
+    <com.quartzdesk.version>3.0.0</com.quartzdesk.version>
 
-    <com.h2database.h2.version>1.3.170</com.h2database.h2.version>
     <org.hibernate.version>4.3.11.Final</org.hibernate.version>
-    <org.quartz-scheduler.quartz.version>2.2.3</org.quartz-scheduler.quartz.version>
+    <org.quartz-scheduler.quartz.version>2.3.0</org.quartz-scheduler.quartz.version>
     <org.slf4j.version>1.7.25</org.slf4j.version>
     <org.springframework.version>4.3.0.RELEASE</org.springframework.version>
   </properties>
@@ -94,12 +93,6 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-core</artifactId>
         <version>1.1.7</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <version>${com.h2database.h2.version}</version>
       </dependency>
 
       <dependency>
