--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.quartzdesk-executor</groupId>
   <artifactId>quartzdesk-executor-pom</artifactId>
   <packaging>pom</packaging>
-  <version>3.1.0</version>
+  <version>3.2.0-SNAPSHOT</version>
 
   <parent>
     <groupId>com.quartzdesk-parent-pom</groupId>
@@ -420,16 +420,16 @@
 
         <plugin>
           <artifactId>maven-antrun-plugin</artifactId>
-          <version>1.6</version>
+          <version>1.8</version>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>3.1</version>
           <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
+            <source>1.7</source>
+            <target>1.7</target>
             <encoding>UTF-8</encoding>
           </configuration>
         </plugin>
@@ -437,13 +437,13 @@
 
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.7</version>
+          <version>2.8.1</version>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>3.0.2</version>
           <configuration>
             <archive>
               <!--
@@ -477,37 +477,37 @@
 
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.8.1</version>
+          <version>3.0.0-M1</version>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.2.2</version>
+          <version>2.5.3</version>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>1.6</version>
+          <version>3.1.0</version>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-source-plugin</artifactId>
-          <version>2.1.2</version>
+          <version>3.0.1</version>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>2.5</version>
+          <version>3.0.2</version>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
-          <version>2.2</version>
+          <version>3.2.0</version>
           <configuration>
             <archive>
               <!--
