--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.quartzdesk-executor</groupId>
   <artifactId>quartzdesk-executor-pom</artifactId>
   <packaging>pom</packaging>
-  <version>3.7.1</version>
+  <version>4.0.0-SNAPSHOT</version>
 
   <parent>
     <groupId>com.quartzdesk-parent-pom</groupId>
@@ -20,7 +20,7 @@
   </parent>
 
   <properties>
-    <com.quartzdesk.version>3.7.1</com.quartzdesk.version>
+    <com.quartzdesk.version>4.0.0-SNAPSHOT</com.quartzdesk.version>
 
     <!--
       The last version that supports Java 7.
