Updated to use QuartzDesk API 3.7.2.

--- a/quartzdesk-executor-domain/pom.xml
+++ b/quartzdesk-executor-domain/pom.xml
@@ -18,8 +18,12 @@
   <parent>
     <groupId>com.quartzdesk-executor</groupId>
     <artifactId>quartzdesk-executor-pom</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>3.7.2</version>
   </parent>
+
+  <properties>
+    <module.name>com.quartzdesk.executor.domain</module.name>
+  </properties>
 
   <dependencies>
 
@@ -31,6 +35,7 @@
       <scope>test</scope>
     </dependency>
 
+
     <!--
       Required at compile time and runtime to support various JAXB2 plugin features.
     -->
@@ -39,6 +44,7 @@
       <artifactId>jaxb2-basics-runtime</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.testng</groupId>
@@ -53,7 +59,7 @@
     <plugins>
 
       <plugin>
-        <groupId>com.redhat.rcm.maven.plugin</groupId>
+        <groupId>de.smartics.maven.plugin</groupId>
         <artifactId>buildmetadata-maven-plugin</artifactId>
         <executions>
           <execution>
@@ -85,10 +91,6 @@
                 -->
                 <arg>-Xfluent-api</arg>
                 <!--
-                  Set methods for collection values.
-                -->
-                <arg>-Xcollection-setter-injector</arg>
-                <!--
                   Support for deep-copying.
                   See http://confluence.highsource.org/display/J2B/Copyable+plugin
                 -->
@@ -98,19 +100,27 @@
                   See http://confluence.highsource.org/display/J2B/Equals+plugin
                 -->
                 <arg>-Xequals</arg>
+
                 <!--
                   Support for hashCode.
                   See http://confluence.highsource.org/display/J2B/HashCode+plugin
                 -->
-                <arg>-XhashCode</arg>
+                <!--<arg>-XhashCode</arg>-->
+
                 <!--
                   Support for toString.
                   See http://confluence.highsource.org/display/J2B/ToString+plugin
                 -->
                 <arg>-XtoString</arg>
+
+                <!--
+                  Support for collection setters.
+                  See https://github.com/highsource/jaxb2-basics/wiki/JAXB2-Setters-Plugin
+                -->
+                <arg>-Xsetters</arg>
+                <arg>-Xsetters-mode=direct</arg>
               </args>
               <extension>true</extension>
-              <forceRegenerate>true</forceRegenerate>
               <verbose>true</verbose>
 
               <!--
