--- a/quartzdesk-executor-core/pom.xml
+++ b/quartzdesk-executor-core/pom.xml
@@ -5,7 +5,8 @@
   ~ Licensed under the MIT license (https://opensource.org/licenses/MIT).
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>quartzdesk-executor-core</artifactId>
@@ -18,8 +19,12 @@
   <parent>
     <groupId>com.quartzdesk-executor</groupId>
     <artifactId>quartzdesk-executor-pom</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>3.7.2</version>
   </parent>
+
+  <properties>
+    <module.name>com.quartzdesk.executor.core</module.name>
+  </properties>
 
   <dependencies>
 
@@ -31,11 +36,13 @@
       <version>${project.version}</version>
     </dependency>
 
+
     <dependency>
       <groupId>com.quartzdesk-executor</groupId>
       <artifactId>quartzdesk-executor-dao</artifactId>
       <version>${project.version}</version>
     </dependency>
+
 
     <dependency>
       <groupId>com.quartzdesk-executor</groupId>
@@ -52,11 +59,13 @@
       <scope>test</scope>
     </dependency>
 
+
     <dependency>
       <groupId>com.jcraft</groupId>
       <artifactId>jsch</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>com.opencsv</groupId>
@@ -64,11 +73,13 @@
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>commons-dbcp</groupId>
@@ -76,11 +87,13 @@
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
     	<groupId>org.apache.httpcomponents</groupId>
     	<artifactId>httpclient</artifactId>
     	<scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.quartz-scheduler</groupId>
@@ -88,11 +101,13 @@
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -100,11 +115,13 @@
        <scope>test</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>log4j-over-slf4j</artifactId>
       <scope>test</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -112,11 +129,13 @@
       <scope>test</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context-support</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.springframework</groupId>
@@ -124,11 +143,13 @@
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <!-- Required at runtime to create the quartzdeskSchedulerFactory bean-->
     <dependency>
@@ -137,17 +158,20 @@
       <scope>runtime</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <scope>test</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.testng</groupId>
@@ -163,7 +187,7 @@
     <plugins>
 
       <plugin>
-        <groupId>com.redhat.rcm.maven.plugin</groupId>
+        <groupId>de.smartics.maven.plugin</groupId>
         <artifactId>buildmetadata-maven-plugin</artifactId>
         <executions>
           <execution>
