--- a/quartzdesk-executor-dao/pom.xml
+++ b/quartzdesk-executor-dao/pom.xml
@@ -5,7 +5,8 @@
   ~ Licensed under the MIT license (https://opensource.org/licenses/MIT).
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>quartzdesk-executor-dao</artifactId>
@@ -18,8 +19,12 @@
   <parent>
     <groupId>com.quartzdesk-executor</groupId>
     <artifactId>quartzdesk-executor-pom</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>3.7.2</version>
   </parent>
+
+  <properties>
+    <module.name>com.quartzdesk.executor.dao</module.name>
+  </properties>
 
   <dependencies>
 
@@ -30,6 +35,7 @@
       <artifactId>quartzdesk-executor-common</artifactId>
       <version>${project.version}</version>
     </dependency>
+
 
     <dependency>
       <groupId>com.quartzdesk-executor</groupId>
@@ -46,11 +52,13 @@
       <scope>test</scope>
     </dependency>
 
+
     <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>commons-dbcp</groupId>
@@ -58,11 +66,13 @@
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -70,11 +80,13 @@
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
        <scope>test</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -82,11 +94,13 @@
       <scope>test</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jul-to-slf4j</artifactId>
       <scope>test</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.springframework</groupId>
@@ -94,17 +108,20 @@
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <!--
     <dependency>
@@ -114,17 +131,20 @@
     </dependency>
     -->
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <scope>test</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.testng</groupId>
@@ -140,7 +160,7 @@
     <plugins>
 
       <plugin>
-        <groupId>com.redhat.rcm.maven.plugin</groupId>
+        <groupId>de.smartics.maven.plugin</groupId>
         <artifactId>buildmetadata-maven-plugin</artifactId>
         <executions>
           <execution>
