--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
-  ~ Copyright (c) 2015-2020 QuartzDesk.com.
+  ~ Copyright (c) 2015-2019 QuartzDesk.com.
   ~ Licensed under the MIT license (https://opensource.org/licenses/MIT).
   -->
 
@@ -11,12 +11,12 @@
   <groupId>com.quartzdesk-executor</groupId>
   <artifactId>quartzdesk-executor-pom</artifactId>
   <packaging>pom</packaging>
-  <version>4.0.0</version>
+  <version>3.7.2</version>
 
   <properties>
     <module.name>com.quartzdesk.executor</module.name>
 
-    <com.quartzdesk.version>4.0.0</com.quartzdesk.version>
+    <com.quartzdesk.version>3.7.2</com.quartzdesk.version>
 
     <!--
       Implementation-Vendor-Id used in manifests.
@@ -30,10 +30,11 @@
     -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <org.hibernate.version>5.4.9.Final</org.hibernate.version>
+    <javax.servlet.jsp.jstl.version>1.2.1</javax.servlet.jsp.jstl.version>
+    <org.hibernate.version>5.1.16.Final</org.hibernate.version>
     <org.quartz-scheduler.quartz.version>2.3.2</org.quartz-scheduler.quartz.version>
-    <org.slf4j.version>1.7.29</org.slf4j.version>
-    <org.springframework.version>5.2.1.RELEASE</org.springframework.version>
+    <org.slf4j.version>1.7.28</org.slf4j.version>
+    <org.springframework.version>4.3.19.RELEASE</org.springframework.version>
   </properties>
 
   <name>QuartzDesk Executor</name>
