--- a/quartzdesk-executor-common/pom.xml
+++ b/quartzdesk-executor-common/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0"?>
 
 <!--
-  ~ Copyright (c) 2015-2019 QuartzDesk.com.
+  ~ Copyright (c) 2015-2020 QuartzDesk.com.
   ~ Licensed under the MIT license (https://opensource.org/licenses/MIT).
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>quartzdesk-executor-common</artifactId>
@@ -18,8 +19,12 @@
   <parent>
     <groupId>com.quartzdesk-executor</groupId>
     <artifactId>quartzdesk-executor-pom</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0</version>
   </parent>
+
+  <properties>
+    <module.name>com.quartzdesk.executor.common</module.name>
+  </properties>
 
   <dependencies>
 
@@ -34,11 +39,13 @@
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -46,11 +53,13 @@
       <scope>provided</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.javassist</groupId>
       <artifactId>javassist</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -58,11 +67,13 @@
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
        <scope>test</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -70,11 +81,13 @@
       <scope>test</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jul-to-slf4j</artifactId>
       <scope>test</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.springframework</groupId>
@@ -82,17 +95,20 @@
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <!-- Required at runtime to create the quartzdeskSchedulerFactory bean-->
     <dependency>
@@ -101,17 +117,20 @@
       <scope>runtime</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <scope>test</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.testng</groupId>
@@ -127,7 +146,7 @@
     <plugins>
 
       <plugin>
-        <groupId>com.redhat.rcm.maven.plugin</groupId>
+        <groupId>de.smartics.maven.plugin</groupId>
         <artifactId>buildmetadata-maven-plugin</artifactId>
         <executions>
           <execution>
