--- a/quartzdesk-executor-web/pom.xml
+++ b/quartzdesk-executor-web/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0"?>
 
 <!--
-  ~ Copyright (c) 2015-2019 QuartzDesk.com.
+  ~ Copyright (c) 2015-2020 QuartzDesk.com.
   ~ Licensed under the MIT license (https://opensource.org/licenses/MIT).
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>quartzdesk-executor-web</artifactId>
@@ -18,8 +19,12 @@
   <parent>
     <groupId>com.quartzdesk-executor</groupId>
     <artifactId>quartzdesk-executor-pom</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0</version>
   </parent>
+
+  <properties>
+    <module.name>com.quartzdesk.executor.web</module.name>
+  </properties>
 
   <dependencies>
 
@@ -31,11 +36,13 @@
       <version>${project.version}</version>
     </dependency>
 
+
     <dependency>
       <groupId>com.quartzdesk-executor</groupId>
       <artifactId>quartzdesk-executor-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+
 
     <dependency>
       <groupId>com.quartzdesk-executor</groupId>
@@ -54,6 +61,7 @@
       <artifactId>quartzdesk-agent</artifactId>
       <scope>provided</scope>
     </dependency>
+
 
     <!--
       Library quartzdesk-api MUST be on the application runtime classpath in case
@@ -76,6 +84,7 @@
       <scope>runtime</scope>
     </dependency>
 
+
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
@@ -83,11 +92,13 @@
       <scope>provided</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -95,11 +106,13 @@
       <scope>runtime</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>log4j-over-slf4j</artifactId>
       <scope>runtime</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -107,17 +120,20 @@
       <scope>runtime</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <scope>compile</scope>
     </dependency>
 
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <scope>compile</scope>
     </dependency>
+
 
     <dependency>
       <groupId>org.testng</groupId>
@@ -132,7 +148,7 @@
     <plugins>
 
       <plugin>
-        <groupId>com.redhat.rcm.maven.plugin</groupId>
+        <groupId>de.smartics.maven.plugin</groupId>
         <artifactId>buildmetadata-maven-plugin</artifactId>
         <executions>
           <execution>
