Updated all dependencies and plugins.

--- a/quartzdesk-executor-core/pom.xml
+++ b/quartzdesk-executor-core/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>com.quartzdesk-executor</groupId>
     <artifactId>quartzdesk-executor-pom</artifactId>
-    <version>4.0.9</version>
+    <version>4.0.12</version>
   </parent>
 
   <properties>
@@ -85,6 +85,13 @@
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
       <scope>compile</scope>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <scope>runtime</scope>
     </dependency>
 
 
