--- a/quartzdesk-executor-dao/pom.xml
+++ b/quartzdesk-executor-dao/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>com.quartzdesk-executor</groupId>
     <artifactId>quartzdesk-executor-pom</artifactId>
-    <version>4.0.9</version>
+    <version>4.0.12</version>
   </parent>
 
   <properties>
@@ -71,6 +71,13 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <scope>compile</scope>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.jboss.logging</groupId>
+      <artifactId>jboss-logging</artifactId>
+      <scope>runtime</scope>
     </dependency>
 
 
