--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <groupId>com.quartzdesk-executor</groupId>
   <artifactId>quartzdesk-executor-pom</artifactId>
   <packaging>pom</packaging>
-  <version>4.0.14</version>
+  <version>4.0.15</version>
 
   <properties>
     <module.name>com.quartzdesk.executor</module.name>
@@ -31,10 +31,18 @@
     -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <org.hibernate.version>5.6.10.Final</org.hibernate.version>
+    <ch.qos.logback.version>1.2.11</ch.qos.logback.version>
+
+    <org.javassist.version>3.29.2-GA</org.javassist.version>
+
+    <!--
+      Most recent version that still supports Java 8.
+    -->
+    <org.hibernate.version>5.6.12.Final</org.hibernate.version>
+
     <org.quartz-scheduler.quartz.version>2.3.2</org.quartz-scheduler.quartz.version>
     <org.slf4j.version>1.7.36</org.slf4j.version>
-    <org.springframework.version>5.3.20</org.springframework.version>
+    <org.springframework.version>5.3.23</org.springframework.version>
   </properties>
 
   <name>QuartzDesk Executor</name>
@@ -103,19 +111,20 @@
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <version>1.2.10</version>
+        <version>1.2.11</version>
       </dependency>
 
 
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-core</artifactId>
-        <version>1.2.10</version>
+        <version>1.2.11</version>
       </dependency>
 
 
       <!--
-        Required by SshRemoteCommandExecutorJob to execute commands over SSH.
+        Required compile-time dependency of quartzdesk-executor-core (SshRemoteCommandExecutorJob) to execute
+        commands over SSH.
       -->
       <dependency>
         <groupId>com.jcraft</groupId>
@@ -124,13 +133,40 @@
       </dependency>
 
 
+      <!--
+        Required compile-time dependency of quartzdesk-executor-core (SqlQueryExecutorJob) to save
+        SQL result sets in CSV format.
+      -->
       <dependency>
         <groupId>com.opencsv</groupId>
         <artifactId>opencsv</artifactId>
-        <version>5.6</version>
+        <version>5.7.0</version>
+
+        <exclusions>
+          <!--
+            Excluded to remove transitive commons-logging dependency. commons-beanutils dependency
+            is added as a separate runtime dependency.
+          -->
+          <exclusion>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+          </exclusion>
+
+          <!--
+            Excluded to remove transitive commons-lang3 dependency. commons-text dependency
+            is added as a separate runtime dependency.
+          -->
+          <exclusion>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
 
+      <!--
+        Required runtime dependency of opencsv. Added explicitly to remove commons-logging dependency.
+      -->
       <dependency>
         <groupId>commons-beanutils</groupId>
         <artifactId>commons-beanutils</artifactId>
@@ -146,32 +182,11 @@
       </dependency>
 
 
-      <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-collections</artifactId>
-        <version>4.4</version>
-      </dependency>
-
-
-      <dependency>
-        <groupId>commons-dbcp</groupId>
-        <artifactId>commons-dbcp</artifactId>
-        <version>1.4</version>
-      </dependency>
-
-
-      <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-io</artifactId>
-        <version>1.3.2</version>
-      </dependency>
-
-
-      <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-lang3</artifactId>
-        <version>3.12.0</version>
-      </dependency>
+<!--      <dependency>-->
+<!--        <groupId>org.apache.commons</groupId>-->
+<!--        <artifactId>commons-collections</artifactId>-->
+<!--        <version>4.4</version>-->
+<!--      </dependency>-->
 
 
       <dependency>
@@ -202,17 +217,31 @@
       </dependency>
 
 
+      <!--
+        Runtime dependency of opencsv library. Added manually to resolve commons-lang3 version collision.
+      -->
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-text</artifactId>
+        <version>1.10.0</version>
+      </dependency>
+
+
+      <!--
+        Compile-time dependency of quartzdesk-executor-core.
+      -->
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
         <version>4.5.13</version>
-      </dependency>
 
-
-      <dependency>
-        <groupId>org.aspectj</groupId>
-        <artifactId>aspectjtools</artifactId>
-        <version>1.9.9</version>
+        <exclusions>
+          <!-- Commons-logging API provided by the SLF4j jcl-over-slf4j bridge -->
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
 
@@ -244,7 +273,7 @@
       <dependency>
         <groupId>org.javassist</groupId>
         <artifactId>javassist</artifactId>
-        <version>3.28.0-GA</version>
+        <version>${org.javassist.version}</version>
       </dependency>
 
 
@@ -285,17 +314,23 @@
             server/container provided data source which is typically backed by a connection pool).
           -->
           <exclusion>
-            <groupId>c3p0</groupId>
+            <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
           </exclusion>
 
-          <!--
-            Hikari JDBC connection pooling support not needed (Quartz configured to use an application
-            server/container provided data source which is typically backed by a connection pool).
-          -->
+          <exclusion>
+            <groupId>com.mchange</groupId>
+            <artifactId>mchange-commons-java</artifactId>
+          </exclusion>
+
           <exclusion>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP-java7</artifactId>
+          </exclusion>
+
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -509,7 +544,7 @@
 
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.10.0</version>
+          <version>3.10.1</version>
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
@@ -527,13 +562,13 @@
 
         <plugin>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>3.1.0</version>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.2.2</version>
+          <version>3.3.0</version>
           <configuration>
             <archive>
               <!--
@@ -562,7 +597,7 @@
 
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.3.1</version>
+          <version>3.4.1</version>
           <configuration>
             <doclint>none</doclint>
             <quiet>true</quiet>
@@ -572,13 +607,13 @@
 
         <plugin>
           <artifactId>maven-release-plugin</artifactId>
-          <version>3.0.0-M5</version>
+          <version>3.0.0-M6</version>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.2.0</version>
+          <version>3.3.0</version>
         </plugin>
 
 
@@ -641,7 +676,7 @@
         <plugin>
           <groupId>org.jvnet.jaxb2.maven2</groupId>
            <artifactId>maven-jaxb2-plugin</artifactId>
-           <version>0.13.3</version>
+           <version>0.15.1</version>
 
           <dependencies>
             <!--
@@ -714,7 +749,7 @@
             <configuration>
               <rules>
                 <requireMavenVersion>
-                  <version>3.0.5</version>
+                  <version>3.2.5</version>
                 </requireMavenVersion>
                 <requireJavaVersion>
                   <version>1.8</version>
