--- a/quartzdesk-executor-common/pom.xml
+++ b/quartzdesk-executor-common/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>com.quartzdesk-executor</groupId>
     <artifactId>quartzdesk-executor-pom</artifactId>
-    <version>4.0.16-SNAPSHOT</version>
+    <version>5.0.0</version>
   </parent>
 
   <properties>
@@ -49,7 +49,7 @@
 
     <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
+      <artifactId>javax.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
 
