--- a/quartzdesk-executor-web/pom.xml
+++ b/quartzdesk-executor-web/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>com.quartzdesk-executor</groupId>
     <artifactId>quartzdesk-executor-pom</artifactId>
-    <version>4.0.16-SNAPSHOT</version>
+    <version>5.0.0</version>
   </parent>
 
   <properties>
@@ -87,7 +87,7 @@
 
     <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
+      <artifactId>javax.servlet-api</artifactId>
       <!-- Provided by the servlet engine runtime -->
       <scope>provided</scope>
     </dependency>
