--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
   <groupId>com.quartzdesk-executor</groupId>
   <artifactId>quartzdesk-executor-pom</artifactId>
   <packaging>pom</packaging>
-  <version>5.0.0</version>
+  <version>5.0.1</version>
 
   <properties>
     <module.name>com.quartzdesk.executor</module.name>
 
-    <com.quartzdesk.version>5.0.0</com.quartzdesk.version>
+    <com.quartzdesk.version>5.0.1</com.quartzdesk.version>
 
     <!--
       Implementation-Vendor-Id used in manifests.
@@ -34,7 +34,7 @@
     <!--
       Most recent version that still supports Java 8.
     -->
-    <ch.qos.logback.version>1.3.11</ch.qos.logback.version>
+    <ch.qos.logback.version>1.3.14</ch.qos.logback.version>
 
     <!--
       servlet-api 3.1 (JavaEE 7)
@@ -246,6 +246,14 @@
         <groupId>javaee</groupId>
         <artifactId>javaee-api</artifactId>
         <version>5</version>
+      </dependency>
+
+
+      <!-- Used by commons-text -->
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.14.0</version>
       </dependency>
 
 
